deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-deployment
spec:
  selector:
    matchLabels:
      app: base
  replicas: 1
  template:
    metadata:
      labels:
        app: base
    spec:
      containers:
      - name: base
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
