service.yaml
apiVersion: v1
kind: Service
metadata:
  name: base-service
spec:
  selector:
    app: base
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
